--- a/crud.html
+++ b/crud.html
@@ -6,136 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Styles: tout-en-un pour être autonome -->
-  <style>
-    :root { --gold:#FFD700; --bg:#111; --panel:#222; --border:#555; }
-    body {
-      background: var(--bg);
-      color: var(--gold);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, "Cormorant Garamond", sans-serif;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 { margin: 0 0 12px }
+  <link rel="stylesheet" href="styles/crud.css">
 
-    button {
-      padding: 8px 14px;
-      margin: 5px;
-      font-weight: 700;
-      background: var(--gold);
-      color: #111;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+ <!-- dans <head> -->
+<script src="js/crud.js" defer></script>
 
-    /* Tableau */
-    table {
-      margin: 18px auto;
-      border-collapse: collapse;
-      background: var(--panel);
-      color: #fff;
-      table-layout: fixed; /* indispensable avec colgroup */
-    }
-    colgroup col { width: auto; } /* chaque col a sa width inline */
-
-    th, td {
-      border: 1px solid var(--border);
-      padding: 10px;
-      vertical-align: top;
-      text-align: left;
-    }
-    thead th { text-align: center; }
-
-    /* Description: wrapper scrollable à l'intérieur du td */
-    .col-description { text-align: left; }
-    .col-description .desc-content {
-      max-height: calc(1.4em * 3); /* ~3 lignes */
-      overflow-y: auto;
-      line-height: 1.4em;
-      white-space: normal;
-      overflow-wrap: anywhere;
-    }
-
-    /* Miniatures images */
-    .thumbs {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-      align-items: flex-start;
-    }
-    .thumbs img {
-      height: 50px;
-      cursor: pointer;
-      margin: 0;
-      border-radius: 6px;
-      display: block;
-    }
-    .thumbs img:hover { transform: scale(1.03); }
-
-    /* Modale slider */
-    #modal {
-      display:none; position:fixed; inset:0;
-      background: rgba(0,0,0,.85); z-index: 1000;
-      justify-content:center; align-items:center; flex-direction:column;
-    }
-    #modal img { max-width:100vw; max-height:100vh; margin-bottom:10px; }
-    #modal .close {
-      position:absolute; top:10px; right:10px;
-      background:#fff; border-radius:6px; padding:6px 10px; border:none; cursor:pointer;
-    }
-
-    /* Modale formulaire */
-    #formModal {
-      display:none; position:fixed; inset:0;
-      background:#000c; z-index:9999; justify-content:center; align-items:center;
-    }
-    #formMontre {
-      background:#222; padding:20px; color:white; max-width:520px; width:90%; border-radius:10px;
-      text-align:left;
-    }
-    #formMontre label { display:block; margin:8px 0; }
-
-    /* Spinner */
-    #spinner {
-      display:none; position: fixed; inset: 0; background: rgba(0,0,0,.7);
-      z-index: 9999; justify-content:center; align-items:center;
-    }
-    #spinner div {
-      border: 6px solid var(--gold);
-      border-top: 6px solid transparent;
-      border-radius: 50%;
-      width: 60px; height: 60px;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin { to { transform: rotate(360deg); } }
-
-
-    /* Prix */
-.price-line { margin: 6px 0; }
-.price-old { text-decoration: line-through; opacity: .7; margin-right: .4em; }
-.price-new { font-weight: 700; }
-
-/* Ruban promo (45°) */
-.main-display { position: relative; }
-.ribbon {
-  position: absolute;
-  top: 12px; left: -40px;
-  width: 160px; text-align: center;
-  transform: rotate(-45deg);
-  z-index: 3;
-}
-.ribbon span {
-  display: block;
-  background: #E53935; /* rouge promo */
-  color: #fff;
-  font-weight: 700;
-  padding: 6px 0;
-  box-shadow: 0 2px 6px rgba(0,0,0,.4);
-  letter-spacing: .5px;
-}
-
-  </style>
 
   <!-- Librairies ZIP (optionnelles si tu utilises downloadZip) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -242,210 +117,6 @@
 
   <div id="spinner"><div></div></div>
 
-  <script>
-    const API_URL = "api.php";
-    let currentCategory = "All";
-    let montres = [];
-    let currentImages = [];
-    let currentIndex = 0;
-    let editing = false;
-
-    function showSpinner(){ document.getElementById("spinner").style.display="flex"; }
-    function hideSpinner(){ document.getElementById("spinner").style.display="none"; }
-
-    async function fetchMontres() {
-      showSpinner();
-      const res = await fetch(API_URL + "?action=list");
-      montres = await res.json();
-      hideSpinner();
-      displayMontres();
-    }
-
-    function displayMontres() {
-      const tbody = document.getElementById("montreTable");
-      tbody.innerHTML = "";
-
-      const filtered = currentCategory === "All" ? montres : montres.filter(m => m.categorie === currentCategory);
-
-      filtered.forEach((m, index) => {
-        const imgs = [m.image1, m.image2, m.image3, m.image4].filter(Boolean); // évite les vides
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${m.reference || ""}</td>
-          <td>${m.nom || ""}</td>
-          <td>${m.prix ? (m.promotion ? `<s>${m.prix} €</s>` : m.prix + " €") : ""}</td>
-          <td>${m.promotion ? m.promotion + " €" : ""}</td>
-          <td class="col-description"><div class="desc-content">${m.description || ""}</div></td>
-          <td>
-            <div class="thumbs">
-              ${imgs.map((src, i) => `<img src="${src}" alt="" onclick="openModal(${JSON.stringify(imgs)}, ${i})">`).join('')}
-            </div>
-          </td>
-          <td>
-            <button title="Éditer" onclick="openEditModal(${index})">📝</button>
-            <button title="Supprimer" onclick="deleteMontre(${m.id})">🗑️</button>
-          </td>
-          <td>${m.categorie || ""}</td>
-          <td>${m.etat || ""}</td>
-          <td>${m.status || ""}</td>
-        `;
-        tbody.appendChild(tr);
-      });
-    }
-
-    function filterCategory(cat){ currentCategory = cat; displayMontres(); }
-
-    /* Slider images */
-    function openModal(images, start){
-      currentImages = images; currentIndex = start;
-      document.getElementById("modal-image").src = images[start];
-      document.getElementById("modal").style.display = "flex";
-    }
-    function closeModal(){ document.getElementById("modal").style.display = "none"; }
-    function prevImage(){
-      currentIndex = (currentIndex - 1 + currentImages.length) % currentImages.length;
-      document.getElementById("modal-image").src = currentImages[currentIndex];
-    }
-    function nextImage(){
-      currentIndex = (currentIndex + 1) % currentImages.length;
-      document.getElementById("modal-image").src = currentImages[currentIndex];
-    }
-
-    /* Formulaire */
-    function openAddModal(){
-      editing = false;
-      const form = document.getElementById("formMontre");
-      form.reset(); form.id.value = "";
-      document.getElementById("formModal").style.display = "flex";
-    }
-    function openEditModal(index){
-      editing = true;
-      const m = montres[index];
-      const form = document.getElementById("formMontre");
-      form.id.value = m.id;
-      form.reference.value = m.reference || "";
-      form.nom.value = m.nom || "";
-      form.prix.value = m.prix || "";
-      form.promotion.value = m.promotion || "";
-      form.description.value = m.description || "";
-      form.categorie.value = m.categorie || "Montres";
-      form.etat.value = m.etat || "Neuf";
-      form.status.value = m.status || "disponible";
-      document.getElementById("formModal").style.display = "flex";
-    }
-    function closeModalForm(){ document.getElementById("formModal").style.display = "none"; }
-
-    async function deleteMontre(id){
-      if(!confirm("Confirmer suppression ?")) return;
-      const fd = new FormData();
-      fd.append("action","delete");
-      fd.append("id", id);
-      showSpinner();
-      await fetch(API_URL, { method:"POST", body: fd });
-      hideSpinner();
-      fetchMontres();
-    }
-
-    document.getElementById("formMontre").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const form = e.target;
-      const dataForm = new FormData(form);
-      const imageForm = new FormData();
-      const imagePaths = [];
-
-      for (let i = 1; i <= 4; i++) {
-        const file = form[`image${i}`].files[0];
-        if (file) {
-          imageForm.append(`image${i}`, file);
-          imagePaths.push("images/" + file.name);
-        } else {
-          const existing = editing ? (montres.find(m => m.id == form.id.value) || {})[`image${i}`] : "";
-          imagePaths.push(existing || "");
-        }
-      }
-
-      if ([1,2,3,4].some(i => imageForm.has(`image${i}`))) {
-        await fetch("upload-images.php", { method: "POST", body: imageForm });
-      }
-
-      dataForm.append("image1", imagePaths[0]);
-      dataForm.append("image2", imagePaths[1]);
-      dataForm.append("image3", imagePaths[2]);
-      dataForm.append("image4", imagePaths[3]);
-      dataForm.append("etat", form.etat.value);
-      dataForm.append("status", form.status.value);
-      dataForm.append("action", editing ? "edit" : "add");
-      dataForm.append("promotion", form.promotion.value ? parseFloat(form.promotion.value) : "");
-
-
-      showSpinner();
-      await fetch(API_URL, { method: "POST", body: dataForm });
-      hideSpinner();
-
-      closeModalForm();
-      fetchMontres();
-    });
-
-    /* Exports */
-    async function downloadZip() {
-      const zip = new JSZip();
-      const files = [
-        { path: 'data/montres.csv', name: 'montres.csv' },
-        { path: 'index.html', name: 'index.html' }
-      ];
-      for (const file of files) {
-        const response = await fetch(file.path);
-        if (!response.ok) { alert(`Erreur de chargement : ${file.path}`); return; }
-        const content = await response.text();
-        zip.file(file.name, content);
-      }
-      const content = await zip.generateAsync({ type: 'blob' });
-      const a = document.createElement('a');
-      a.href = URL.createObjectURL(content);
-      a.download = 'fichiers_montres.zip';
-      a.click();
-    }
-
-    function downloadProduitsCSV(){
-      if (montres.length === 0) { alert("Aucune donnée"); return; }
-      const headers = ["id","reference","nom","prix","promotion","description","image1","image2","image3","image4","categorie","etat","status"];
-
-      const rows = montres.map((m,i)=>headers.map(h=>{
-        const v = h==="id" ? (m.id ?? i) : (m[h] ?? "");
-        const s = typeof v === "string" ? v : (typeof v === "number" ? String(v) : JSON.stringify(v));
-        return `"${s.replace(/"/g,'""')}"`;
-      }).join(","));
-      const csv = [headers.join(","), ...rows].join("\n");
-      const blob = new Blob([csv], {type:'text/csv;charset=utf-8;'});
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = "produits.csv";
-      a.click();
-    }
-
-    function sendSQLiteDataToServer() {
-      if (montres.length === 0) { alert("Aucune donnée à envoyer !"); return; }
-      const headers = ["id","reference","nom","prix","promotion","description","image1","image2","image3","image4","categorie","etat","status"];
-
-      const rows = montres.map((m,i)=>headers.map(h=>{
-        const v = h==="id" ? i : (m[h] || "");
-        const s = typeof v === "string" ? v : (typeof v === "number" ? String(v) : JSON.stringify(v));
-        return `"${s.replace(/"/g,'""')}"`;
-      }).join(","));
-      const csv = [headers.join(","), ...rows].join("\n");
-      const blob = new Blob([csv], { type: 'text/csv' });
-      const formData = new FormData();
-      formData.append("csvFile", blob, "montres.csv");
-      showSpinner();
-      fetch("upload.php", { method:"POST", body: formData })
-        .then(r => r.text())
-        .then(msg => { hideSpinner(); alert("✅ CSV mis à jour sur le serveur :\n" + msg); })
-        .catch(err => { hideSpinner(); alert("❌ Erreur : " + err.message); });
-    }
-
-    window.onload = fetchMontres;
-
-
-  </script>
+  
 </body>
 </html>
