--- a/crud.html
+++ b/crud.html
@@ -89,10 +89,10 @@
       <label>Prix : <input type="number" name="prix" required></label>
       <label>Promotion : <input type="number" name="promotion" placeholder="entrer le nouveau prix"></label>
       <label>Description : <textarea name="description" rows="3" required></textarea></label>
-      <label>Image 1 : <input type="file" name="image1" accept="image/*"></label>
-      <label>Image 2 : <input type="file" name="image2" accept="image/*"></label>
-      <label>Image 3 : <input type="file" name="image3" accept="image/*"></label>
-      <label>Image 4 : <input type="file" name="image4" accept="image/*"></label>
+      <label>Images : 
+        <input type="file" name="images" accept="image/*" multiple>
+      </label>
+
       <label>Catégorie :
         <select name="categorie">
           <option>Montres</option>
