--- a/crud.html
+++ b/crud.html
@@ -15,6 +15,8 @@
   <!-- Librairies ZIP (optionnelles si tu utilises downloadZip) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip-utils/0.1.0/jszip-utils.min.js"></script>
+  
+  
 </head>
 
 <body>
@@ -80,6 +82,23 @@
     </div>
   </div>
 
+<!-- Modale d'édition d'image (dans le form edit) -->
+<div id="editImageModal" class="img-edit-modal" style="display:none;">
+  <div class="img-edit-modal-content">
+    <button class="close" onclick="closeEditImageModal()">✖</button>
+    <img id="editImageModalImg" alt="">
+    <div class="actions">
+      <button type="button" onclick="triggerReplace()">📁 Remplacer</button>
+      <button type="button" onclick="deleteCurrentSlot()">🗑️ Supprimer</button>
+    </div>
+  </div>
+</div>
+
+<!-- Input caché pour choisir un fichier de remplacement -->
+<input type="file" id="replaceImageInput" accept="image/*" style="display:none">
+
+
+
   <!-- Modale Formulaire -->
   <div id="formModal">
     <form id="formMontre" enctype="multipart/form-data">
@@ -92,6 +111,7 @@
       <label>Images : 
         <input type="file" name="images" accept="image/*" multiple>
       </label>
+      <div id="imagesPreview" class="thumbs"></div>
 
       <label>Catégorie :
         <select name="categorie">
